# bh-finance

./: .gitignore  README.md  app.py  build_exe_windows.bat  house_assumptions.example.toml  pyproject.toml  requirements.txt  run_web.bat  run_windows.bat
assets/: forensic_valuation_model_v3.xlsx
docs/: BUNDLE_HANDOFF.md  CHANGES_NUMERIC.md  FIX17_SPEC.md  MELI_VALIDATION.md  PROVIDER_MATRIX.md  R2_PHASE_REPORT.md  R3_PHASE_REPORT.md  SEGMENT_VALIDATION.md  SOURCE_MAP.md  UI_VALIDATION.md  UI_VALIDATION_TK_ARCHIVE.md  V3_CHARTER.md  V3_R3_EXPORT_DESIGN.md  golden_post_fix.json  golden_pre_fix.json
forensic_viz/: __init__.py  __main__.py  anchors.py  cache.py  compare.py  config.py  dashboard.py  demo_data.py  edgar.py  estimates.py  explore.py  export.py  factstore.py  gui.py  insiders.py  interactive.py  kpi.py  ledger.py  market.py  metrics.py  model_export.py  palette.py  pipeline.py  prices.py  profile.py  quarters.py  rates.py  reconcile.py  runid.py  sandbox.py  segments.py  valuation.py  verdict.py  workbook.py
tests/: conftest.py  test_a4_geometry.py  test_anchors.py  test_api_contract.py  test_bridge_parity.py  test_dashboard.py  test_edgar_parse.py  test_entry_price.py  test_estimates_fmp.py  test_explore.py  test_export_and_estimates.py  test_factstore.py  test_filing_selection.py  test_house_config.py  test_hover.py  test_insiders.py  test_instance_fetch.py  test_interest_rescue.py  test_is_tie.py  test_ledger_compare.py  test_ledger_compare_sandbox.py  test_ltm_basis.py  test_market.py  test_metrics.py  test_model_export.py  test_pipeline_cancel.py  (+24 more)
(+25 files in other folders)
