[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-stock-viz"
version = "1.0.0"
description = "5-year stock performance dashboard from SEC EDGAR XBRL and daily prices"
requires-python = ">=3.10"
dependencies = ["requests>=2.28", "matplotlib>=3.7", "openpyxl>=3.1"]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
forensic-viz = "forensic_viz.__main__:main"

[tool.setuptools]
packages = ["forensic_viz"]
