[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-stock-viz"
version = "2.0.0"
description = "Forensic five-phase stock report (10y dashboard, unit economics, health checks, valuation, verdict) from SEC EDGAR XBRL"
requires-python = ">=3.10"
dependencies = ["requests>=2.28", "matplotlib>=3.7", "openpyxl>=3.1", "pypdf>=4", "plotly>=5.18"]

[project.optional-dependencies]
dev = ["pytest>=7"]
test = ["pytest>=8", "quickjs>=1.19", "dukpy>=0.3"]

[project.scripts]
forensic-viz = "forensic_viz.__main__:main"

[tool.setuptools]
packages = ["forensic_viz"]
